# goph420-x2025-lab04-stJF

./: README.md  SSH  SSH.pub  pyproject.toml  requirements.txt
examples/: driver.py  plot_magnitude_time.py
src/lab_04/: regression.py
