[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab04"
version = "0.0.1"
authors = [ 
    { name="Joan M. Flores Lopez", email="joamanuel@gmail.com" },
]
description="An example Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ 
    "numpy", 
    "matplotlib",
]
classifiers = [ 
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent", 
    "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/joamanuel/goph420-w2025-lab04-stJF"
